--- a/src/app/features/administration/components/user-profile/user-profile.component.html
+++ b/src/app/features/administration/components/user-profile/user-profile.component.html
@@ -63,7 +63,7 @@
                             <div class="col-sm-6">
                                 <div class="mb-3">
                                     <label for="phoneNumber" class="form-label">Phone Number</label>
-                                    <input type="text" id="phoneNumber" placeholder="Phone Number" class="form-control"
+                                    <input type="tel" id="phoneNumber" placeholder="Phone Number" class="form-control"
                                         formControlName="phoneNumber">
                                 </div>
                             </div>
