minor fixes on tickets display and dynamic table

--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -171,6 +171,11 @@
                 </td>
             </tr>
         </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="9">No tickets found.</td>
+          </tr>
+        </ng-template>
     </p-table>
       <!-- <p-table
         #ticketsTable
