VQ-756: code refactoring after revert

--- a/src/app/features/reports-v2/list-report/list-report.component.css
+++ b/src/app/features/reports-v2/list-report/list-report.component.css
@@ -18,7 +18,7 @@
   font-size: 8px !important;
 }
 ::ng-deep .p-datatable-tbody tr td{
-  font-size: 8px !important;
+  /* font-size: 8px !important; */
   padding: 0px!important;
   line-height: 25px !important;
 }
