--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -7,7 +7,7 @@
                 strokeWidth="3"
                 fill="var(--surface-ground)"
                 animationDuration=".6s"
-              ></p-progressSpinner>
+            ></p-progressSpinner>
         </div>
         <div class="mt-5" *ngIf="shouldShowTable">
             <p-table 
@@ -77,22 +77,22 @@
                                 <ul class="dropdown-menu">
                                     <li (click)="gotoEditReport(report)">Edit</li>
                                     <li
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#saveReportModal"
-                                    id="selectReport"
-                                    (click)="selectReport(report)"
-                                  >
-                                    Rename
-                                </li>
-                                  <li data-bs-toggle="modal" data-bs-target="#shareModal">Share</li>
-                                  <li data-bs-toggle="modal" data-bs-target="#downloadModal">Download</li>
-                                  <li 
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#deleteReportModal"
-                                    (click)="selectReport(report)"
-                                  >
-                                  Delete
-                                </li>
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#saveReportModal"
+                                        id="selectReport"
+                                        (click)="selectReport(report)"
+                                    >
+                                        Rename
+                                    </li>
+                                    <li data-bs-toggle="modal" data-bs-target="#shareModal">Share</li>
+                                    <li data-bs-toggle="modal" data-bs-target="#downloadModal">Download</li>
+                                    <li 
+                                        data-bs-toggle="modal"
+                                        data-bs-target="#deleteReportModal"
+                                        (click)="selectReport(report)"
+                                    >
+                                    Delete
+                                    </li>
                                 </ul>
                             </div>                              
                         </td>
@@ -111,12 +111,17 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
-  
+            <button 
+                type="button" 
+                class="btn-close d-none" 
+                data-bs-dismiss="modal" 
+                aria-label="Close"
+                #closebutton
+            ></button>
             <app-save-report-modal
                [report]="selectedReport" 
                (reportToSave)="saveReport($event)"
             ></app-save-report-modal>
-          
         </div>
       </div>
     </div>
@@ -131,7 +136,7 @@
             <h5 class="modal-title text-danger text-center">
                 Delete {{ selectedReport?.name }}?
             </h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button #closebutton type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
         <div class="modal-body">        
