--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
@@ -77,17 +77,7 @@
               </ng-container>
             </select>
           </div>
-          <!-- <div class="col-lg-4 col-md-6 col-sm-12">
-            <label class="required">Date of Birth</label>
-            <div>
-              <p-calendar
-                formControlName="dateOfBirth"
-                [showIcon]="true"
-                [showButtonBar]="true"
-                (ngModelChange)="selectDate($event)"
-              ></p-calendar>
-            </div>
-          </div> -->
+
           <div class="col-lg-4 col-md-6 col-sm-12">
             <label [for]="'idNumber'" class="required">ID No.</label>
             <input
@@ -105,6 +95,24 @@
               formControlName="pinNumber"
               [id]="'pinNo'"
             />
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="w-100">
+              <label class="required">Date of Birth</label>
+              <div>
+                <p-calendar
+                  formControlName="date_of_birth"
+                  ngDefaultControl
+                  dateFormat="dd/mm/yy"
+                  [showIcon]="true"
+                  [showButtonBar]="true"
+                >
+                  <ng-template pTemplate="header">
+                    <!-- <div style="color: red; font-weight: 500;">The Product Option you selected is meant for 18 and above</div> -->
+                  </ng-template>
+                </p-calendar>
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="w-75">
@@ -570,7 +578,7 @@
                   <label class="required">With Effect From</label>
                   <div>
                     <p-calendar
-                      formControlName="withEffectFromDate"
+                      formControlName="with_effect_from"
                       ngDefaultControl
                       dateFormat="dd/mm/yy"
                       [showIcon]="true"
@@ -1541,7 +1549,8 @@
       class="btn btn-primary btn-sm"
       (click)="nextPage()"
     >
-      Continue &nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i>
+      Continue
+      <!-- &nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i> -->
     </button>
   </div>
 
