correction to Pull Request

--- a/src/app/features/lms/ind/components/quotation/components/lifestyle-details/lifestyle-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/lifestyle-details/lifestyle-details.component.html
@@ -311,7 +311,7 @@
       <i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp; Back
     </button>
     <button
-    (click)="saveClientLisfeStyle()"
+    (click)="saveClientLifeStyle()"
       style="padding: 0.6em"
       type="button"
       class="btn btn-primary btn-sm"
