calendar fix to create events on current day and onwards

--- a/src/app/features/base/components/dashboard/calendar/calendar.component.html
+++ b/src/app/features/base/components/dashboard/calendar/calendar.component.html
@@ -132,7 +132,8 @@
                     [showIcon]="true"
                     styleClass="calendar-input"
                     formControlName="eventDate"
-                    (onSelect)="sliceTime()">
+                    (onSelect)="sliceTime(startTime)"
+                    [minDate]="date">
                   </p-calendar>
                 </span>
               </div>
@@ -186,8 +187,8 @@
                 <div class="row mb-3">
                   <div class="col-sm-6">
                     <label for="timeFrom" class="form-label">Time From</label>
-                    <select class="form-select" id="timeFrom" formControlName="fromDate">
-                      <option *ngFor="let time of slicedTime" [value]="time">
+                    <select class="form-select" id="timeFrom" formControlName="fromDate" (click)="timeFromEvent($event)">
+                      <option *ngFor="let time of slicedTimeFrom" [value]="time">
                         <span>{{ time | date: 'shortTime' }}</span>
                       </option>
                     </select>
@@ -195,7 +196,7 @@
                   <div class="col-sm-6">
                     <label for="timeTo" class="form-label">Time To</label>
                     <select class="form-select" id="timeTo" formControlName="toDate">
-                      <option *ngFor="let time of slicedTime" [value]="time">
+                      <option *ngFor="let time of slicedTimeTo" [value]="time">
                         <span>{{ time | date: 'shortTime' }}</span>
                       </option>
                     </select>
