--- a/src/app/features/entities/components/client/list-client/list-client.component.html
+++ b/src/app/features/entities/components/client/list-client/list-client.component.html
@@ -21,10 +21,77 @@
 
     <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
 
-    <app-dynamic-table
+    <!--<app-dynamic-table
       [tableDetails]="tableDetails"
       (onLazyLoad)="lazyLoadClients($event)">
-    </app-dynamic-table>
+    </app-dynamic-table>-->
+
+   <p-table
+            (onLazyLoad)="lazyLoadClients($event)"
+             [autoLayout]="true"
+             [lazy]="true"
+             [paginator]="true"
+             [rowHover]="true"
+             [resizableColumns]="true"
+             [showCurrentPageReport]="true"
+             [rows]="pageSize || 5"
+             [totalRecords]="clientsData?.totalElements"
+             [value]="clientsData?.content"
+            [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+            responsiveLayout="stack"
+            [scrollable]="true"
+            scrollHeight="400px"
+             currentPageReportTemplate="{first} - {last} of {totalRecords}"
+             [globalFilterFields]=globalFilterFields
+   >
+
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="name">
+            Name
+            <p-sortIcon field="name"></p-sortIcon>
+          </th>
+          <th pSortableColumn="modeOfIdentity">
+            Primary ID Type
+            <p-sortIcon field="modeOfIdentity"></p-sortIcon>
+          </th>
+          <th pSortableColumn="idNumber">
+            ID Number
+            <p-sortIcon field="idNumber"></p-sortIcon>
+          </th>
+          <th pSortableColumn="clientType.clientTypeName">
+            Client Type
+            <p-sortIcon field="clientType.clientTypeName"></p-sortIcon>
+          </th>
+          <th class="head">Actions</th>
+        </tr>
+        <tr>
+          <th>
+            <input type="text" class="form-control w-75" (keyup)="filter($event);">
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-client>
+        <tr>
+          <td>{{ client.firstName | titlecase }} {{ client.lastName | titlecase }}</td>
+          <td>{{ client.modeOfIdentity | titlecase }}</td>
+          <td>{{ client.idNumber }}</td>
+          <td>{{ client.clientType.clientTypeName | titlecase }}</td>
+          <td>
+            <div class="actions">
+              <button type="button" class="btn btn-link" (click)="viewDetailsWithId(client.id)">
+                <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
+              </button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="8">No Client Found.</td>
+        </tr>
+      </ng-template>
+    </p-table>
   </div>
 </div>
 
