--- a/src/app/features/entities/components/entity/list-entity/list-entity.component.html
+++ b/src/app/features/entities/components/entity/list-entity/list-entity.component.html
@@ -17,9 +17,80 @@
     <div class="my-4 ms-4 me-4" style="position: relative;">
         <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
 
-        <app-dynamic-table
+        <!--<app-dynamic-table
             [tableDetails]="tableDetails"
             (onLazyLoad)="lazyLoadEntity($event)">
-        </app-dynamic-table>
+        </app-dynamic-table>-->
+      <p-table
+        (onLazyLoad)="lazyLoadEntity($event)"
+        [autoLayout]="true"
+        [lazy]="true"
+        [paginator]="true"
+        [rowHover]="true"
+        [resizableColumns]="true"
+        [showCurrentPageReport]="true"
+        [rows]="pageSize || 5"
+        [totalRecords]="entities?.totalElements"
+        [value]="entities?.content"
+        [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+        responsiveLayout="stack"
+        [scrollable]="true"
+        scrollHeight="400px"
+        currentPageReportTemplate="{first} - {last} of {totalRecords}"
+        [globalFilterFields]=globalFilterFields
+      >
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="name">
+              Name
+              <p-sortIcon field="name"></p-sortIcon>
+            </th>
+            <th pSortableColumn="modeOfIdentity.name">
+              ID Type
+              <p-sortIcon field="modeOfIdentity.name"></p-sortIcon>
+            </th>
+            <th pSortableColumn="identityNumber">
+              ID Number
+              <p-sortIcon field="identityNumber"></p-sortIcon>
+            </th>
+            <th pSortableColumn="pinNumber">
+              Pin Number
+              <p-sortIcon field="pinNumber"></p-sortIcon>
+            </th>
+            <th pSortableColumn="categoryName">
+              Entity Type
+              <p-sortIcon field="categoryName"></p-sortIcon>
+            </th>
+            <th class="head">Actions</th>
+          </tr>
+          <tr>
+            <th>
+              <input type="text" class="form-control w-75" (keyup)="filter($event);">
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-entity>
+          <tr>
+            <td>{{ entity.name | titlecase }}</td>
+            <td>{{ entity.modeOfIdentity.name | titlecase }}</td>
+            <td>{{ entity.identityNumber }}</td>
+            <td>{{ entity.pinNumber }}</td>
+            <td>{{ entity.categoryName }}</td>
+            <td>
+              <div class="actions">
+                <button type="button" class="btn btn-link" (click)="viewDetailsWithId(entity.id)">
+                  <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
+                </button>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="8">No Entity Found.</td>
+          </tr>
+        </ng-template>
+      </p-table>
     </div>
 </div>
