--- a/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
+++ b/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
@@ -20,10 +20,81 @@
   <div class="my-4 ms-4 me-4" style="position: relative;">
     <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
 
-    <app-dynamic-table
+    <!--<app-dynamic-table
       [tableDetails]="tableDetails"
       (onLazyLoad)="lazyLoadAgents($event)">
-    </app-dynamic-table>
+    </app-dynamic-table>-->
+    <p-table
+      (onLazyLoad)="lazyLoadAgents($event)"
+      [autoLayout]="true"
+      [lazy]="true"
+      [paginator]="true"
+      [rowHover]="true"
+      [resizableColumns]="true"
+      [showCurrentPageReport]="true"
+      [rows]="pageSize || 5"
+      [totalRecords]="intermediaries?.totalElements"
+      [value]="intermediaries?.content"
+      [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+      responsiveLayout="stack"
+      [scrollable]="true"
+      scrollHeight="400px"
+      currentPageReportTemplate="{first} - {last} of {totalRecords}"
+      [globalFilterFields]=globalFilterFields
+    >
+
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="name">
+            Name
+            <p-sortIcon field="name"></p-sortIcon>
+          </th>
+          <th pSortableColumn="modeOfIdentity">
+            Primary ID Type
+            <p-sortIcon field="modeOfIdentity"></p-sortIcon>
+          </th>
+          <th pSortableColumn="agentIdNo">
+            ID Number
+            <p-sortIcon field="agentIdNoumber"></p-sortIcon>
+          </th>
+          <th pSortableColumn="primaryType">
+            Account Type
+            <p-sortIcon field="primaryType"></p-sortIcon>
+          </th>
+          <th pSortableColumn="accountType">
+            Business Unit
+            <p-sortIcon field="accountType"></p-sortIcon>
+          </th>
+          <th class="head">Actions</th>
+        </tr>
+        <tr>
+          <th>
+            <input type="text" class="form-control w-75" (keyup)="filter($event);">
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-agent>
+        <tr>
+          <td>{{ agent.name | titlecase }}</td>
+          <td>{{ agent.modeOfIdentity | titlecase }}</td>
+          <td>{{ agent.agentIdNo }}</td>
+          <td>{{ agent.primaryType | titlecase }}</td>
+          <td>{{agent.accountType | titlecase }}</td>
+          <td>
+            <div class="actions">
+              <button type="button" class="btn btn-link" (click)="viewDetailsWithId(agent.id)">
+                <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
+              </button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="8">No Agent Found.</td>
+        </tr>
+      </ng-template>
+    </p-table>
   </div>
 </div>
 
