--- a/src/app/features/entities/components/service-provider/list-service-provider/list-service-provider.component.html
+++ b/src/app/features/entities/components/service-provider/list-service-provider/list-service-provider.component.html
@@ -21,10 +21,82 @@
       <div class="my-4 ms-4" style="position: relative;">
         <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
 
-        <app-dynamic-table
+        <!--<app-dynamic-table
           [tableDetails]="tableDetails"
           (onLazyLoad)="lazyLoadServiceProviders($event)">
-        </app-dynamic-table>
+        </app-dynamic-table>-->
+
+        <p-table
+          (onLazyLoad)="lazyLoadServiceProviders($event)"
+          [autoLayout]="true"
+          [lazy]="true"
+          [paginator]="true"
+          [rowHover]="true"
+          [resizableColumns]="true"
+          [showCurrentPageReport]="true"
+          [rows]="pageSize || 5"
+          [totalRecords]="ServiceProviderDetails?.totalElements"
+          [value]="ServiceProviderDetails?.content"
+          [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+          responsiveLayout="stack"
+          [scrollable]="true"
+          scrollHeight="400px"
+          currentPageReportTemplate="{first} - {last} of {totalRecords}"
+          [globalFilterFields]=globalFilterFields
+        >
+
+          <ng-template pTemplate="header">
+            <tr>
+              <th pSortableColumn="name">
+                Name
+                <p-sortIcon field="name"></p-sortIcon>
+              </th>
+              <th pSortableColumn="category">
+                Category
+                <p-sortIcon field="category"></p-sortIcon>
+              </th>
+              <th pSortableColumn="spEntityType">
+                Entity Type
+                <p-sortIcon field="spEntityType"></p-sortIcon>
+              </th>
+              <th pSortableColumn="modeOfIdentity">
+                Primary ID Type
+                <p-sortIcon field="modeOfIdentity"></p-sortIcon>
+              </th>
+              <th pSortableColumn="pinNumber">
+                ID Number
+                <p-sortIcon field="pinNumber"></p-sortIcon>
+              </th>
+              <th class="head">Actions</th>
+            </tr>
+            <tr>
+              <th>
+                <input type="text" class="form-control w-75" (keyup)="filter($event);">
+              </th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-serviceProvider>
+            <tr>
+              <td>{{ serviceProvider.name | titlecase }}</td>
+              <td>{{ serviceProvider.category | titlecase }}</td>
+              <td>{{ serviceProvider.spEntityType | titlecase }}</td>
+              <td>{{ serviceProvider.modeOfIdentity }}</td>
+              <td>{{ serviceProvider.pinNumber }}</td>
+              <td>
+                <div class="actions">
+                  <button type="button" class="btn btn-link" (click)="viewDetailsWithId(serviceProvider.id)">
+                    <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
+                  </button>
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="emptymessage">
+            <tr>
+              <td colspan="8">No Service Provider Found.</td>
+            </tr>
+          </ng-template>
+        </p-table>
       </div>
 
 </div>
