update baseurl to crm setup service

--- a/src/app/features/entities/components/entity/new-entity/new-entity.component.html
+++ b/src/app/features/entities/components/entity/new-entity/new-entity.component.html
@@ -139,7 +139,7 @@
                               </p>
                                 <div (change)="onFileChange($event)">
                                     <img *ngIf="url !== '' && url" [src]="url" alt="" id="profile-photo" />
-                                    <input type="file" id="inputProfileImg" formControlName="profilePiture" hidden />
+                                    <input type="file" id="inputProfileImg" formControlName="profilePiture" accept="image/jpeg, image/png" hidden />
                                     <label *ngIf="url === ''" for="inputProfileImg" class="img_upload">
                                         <i class="fa-solid fa-cloud-arrow-up"></i> Upload image</label>
                                     <label for="inputProfileImg" *ngIf="url !== ''" class="img_edit">Edit</label>
