--- a/src/app/features/lms/ind/components/quotation/components/medical-history/medical-history.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/medical-history/medical-history.component.html
@@ -10,12 +10,23 @@
   </div>
 
   <div class="full-border px-5" style="padding: 0">
+
     <div>
       <div class="d-flex justify-content-between pt-3 siz">
         <div class="fw-bold text-black">Medical history</div>
       </div>
       <div class="text-black">
-        <div class="col fadeIn">
+        <div class="col fadeIn" style="position: relative">
+          <ngx-spinner
+          name="medical_history_screen"
+            type="ball-clip-rotate-multiple"
+            [fullScreen]="false"
+            color="#00529B"
+            size="medium"
+            bdColor="rgba(255, 255, 255, 0.966)"
+          ></ngx-spinner>
+  
+
           <div [formGroup]="medicalHistoryForm" class="w-100">
             <div class="my-lg-5">
               <label class="required">1. Do you have a personal doctor?</label>
