--- a/src/assets/css/lms-base.scss
+++ b/src/assets/css/lms-base.scss
@@ -3,6 +3,21 @@
   & .row{
     padding: 0.3rem 0;
 
+    > div {
+      padding: 0.2rem 0.7rem; 
+    }
+
   }
+  & .text-gray{
+    color: gray;
+  }
+  & .form-select {
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: var(--bs-border-radius);
+}
+& .p-calendar {
+  border: var(--bs-border-width) solid var(--bs-border-color) !important;
+    border-radius: var(--bs-border-radius) !important;
+}
     
 }
