--- a/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
+++ b/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
@@ -1,10 +1,10 @@
 <div class="card" style="border-radius: 0; font-size: 14px;">
   <div class="card-body">
     <div class="row">
-      <div class="col-sm-9">
+      <div class="col-sm-9 col-9">
         <h5 class="card-title">{{'lang.tickets' | translate}}</h5>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-2 col-2">
         <span class="text-danger fw-bold">{{ticketCountTotal ? ticketCountTotal : 0}}</span>
       </div>
     </div>
