--- a/src/app/features/base/components/dashboard/calendar/calendar.component.html
+++ b/src/app/features/base/components/dashboard/calendar/calendar.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     <form [formGroup]="dateSelectionForm">
       <div class="row">
-        <div class="col-sm-2 offset-sm-3" >
+        <div class="col-sm-2 col-4">
           <select
             class="form-select"
             aria-label="Default select example"
@@ -14,7 +14,7 @@
             </option>
           </select>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 col-4">
           <select
             class="form-select"
             aria-label="Default select example"
@@ -27,7 +27,7 @@
             </option>
           </select>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 col-4">
           <select
             class="form-select"
             aria-label="Default select example"
@@ -39,7 +39,7 @@
             </option>
           </select>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-12">
           <button
             class="btn btn-sm create-event-button"
             (click)="activateCreateEvent('create')"
@@ -114,7 +114,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="row">
-              <div class="col-sm-8">
+              <div class="col-sm-8 col-8">
                 <span
                   style="padding: 10px;
                    border-radius: 100%;
@@ -126,7 +126,7 @@
                 </span>
                 {{ months[currMonth] | titlecase }}, {{ daysOfTheWeek[dayOfWeek] | titlecase }}
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-4 col-4">
                 <span>
                   <p-calendar
                     [showIcon]="true"
@@ -184,7 +184,7 @@
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <div class="col-sm-6">
+                  <div class="col-sm-6 col-6">
                     <label for="timeFrom" class="form-label">Time From</label>
                     <select class="form-select" id="timeFrom" formControlName="fromDate">
                       <option *ngFor="let time of slicedTime" [value]="time">
@@ -192,7 +192,7 @@
                       </option>
                     </select>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-6 col-6">
                     <label for="timeTo" class="form-label">Time To</label>
                     <select class="form-select" id="timeTo" formControlName="toDate">
                       <option *ngFor="let time of slicedTime" [value]="time">
@@ -225,7 +225,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-2 col-6 event-button">
             <button
               class="btn text-end-view"
               (click)="activateCreateEvent('DAY')"
@@ -235,7 +235,7 @@
             Back
             </button>
           </div>
-          <div class="col-sm-2 offset-sm-8 text-end">
+          <div class="col-sm-2 col-6 offset-sm-8 text-end event-button">
             <i class="fa fa-floppy-o" aria-hidden="true"></i>
             <button
               class="btn text-end-view"
