VQ-1146: Responsive collapsible sidebar

--- a/src/app/features/base/components/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/features/base/components/dashboard-layout/dashboard-layout.component.css
@@ -1,4 +1,13 @@
 
 
+@media (max-width: 576px) {
+    .hideSideNav {
+        margin-left: -230px;
+        transition: margin-left 1s;
+    }
 
-
+    .showSideNav {
+        margin-left: 1px;
+        transition: margin-left 1s;
+    }
+}
