--- a/src/app/features/base/components/sidebar/sidebar.component.html
+++ b/src/app/features/base/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="base-side-nav" style="margin: 0; padding: 2.4rem 0 0 0">
+<div style="margin: 0; padding: 2.4rem 0 0 0">
   <ul style="list-style: none; margin: 0px; padding-left: 0px">
     <li>
       <button
